docs: added RuntimeCultureSwitching sample

--- a/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/Strings/fr/Resources.resw
+++ b/UI/LocalizationSamples/RuntimeCultureSwitching/UnoLocalization.Shared/Strings/fr/Resources.resw
@@ -117,10 +117,28 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="LanguageSettings_GoBack.Content" xml:space="preserve">
+    <value>Retourner</value>
+  </data>
+  <data name="LanguageSettings_Title.Text" xml:space="preserve">
+    <value>Paramètres de langue</value>
+  </data>
   <data name="MainPage_CodeBehindString" xml:space="preserve">
     <value>Texte provenant du code-behind</value>
   </data>
+  <data name="MainPage_GotoLanguageSettings.Content" xml:space="preserve">
+    <value>Paramètres de langue</value>
+  </data>
+  <data name="MainPage_GotoNextPage.Content" xml:space="preserve">
+    <value>Page suivante</value>
+  </data>
   <data name="MainPage_IntroText.Text" xml:space="preserve">
     <value>Bonjour Uno</value>
+  </data>
+  <data name="Page1_GoBack.Content" xml:space="preserve">
+    <value>Retourner</value>
+  </data>
+  <data name="Page1_Title.Text" xml:space="preserve">
+    <value>Page en français</value>
   </data>
 </root>
