--- a/reference/ToDo/ToDo/Strings/es/Resources.resw
+++ b/reference/ToDo/ToDo/Strings/es/Resources.resw
@@ -1,123 +1,186 @@
-<?xml version="1.0" encoding="utf-8"?>
 <root>
-  <!--
-    Microsoft ResX Schema
-
-    Version 2.0
-
-    The primary goals of this format is to allow a simple XML format
-    that is mostly human readable. The generation and parsing of the
-    various data types are done through the TypeConverter classes
-    associated with the data types.
-
-    Example:
-
-    ... ado.net/XML headers & schema ...
-    <resheader name="resmimetype">text/microsoft-resx</resheader>
-    <resheader name="version">2.0</resheader>
-    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
-    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-        <value>[base64 mime encoded serialized .NET Framework object]</value>
-    </data>
-    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
-        <comment>This is a comment</comment>
-    </data>
-
-    There are any number of "resheader" rows that contain simple
-    name/value pairs.
-
-    Each data row contains a name, and value. The row also contains a
-    type or mimetype. Type corresponds to a .NET class that support
-    text/value conversion through the TypeConverter architecture.
-    Classes that don't support this are serialized and stored with the
-    mimetype set.
-
-    The mimetype is used for serialized objects, and tells the
-    ResXResourceReader how to depersist the object. This is currently not
-    extensible. For a given mimetype the value must be set accordingly:
-
-    Note - application/x-microsoft.net.object.binary.base64 is the format
-    that the ResXResourceWriter will generate, however the reader can
-    read any of the formats listed below.
-
-    mimetype: application/x-microsoft.net.object.binary.base64
-    value   : The object must be serialized with
-            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.soap.base64
-    value   : The object must be serialized with
-            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-            : and then encoded with base64 encoding.
-
-    mimetype: application/x-microsoft.net.object.bytearray.base64
-    value   : The object must be serialized into a byte array
-            : using a System.ComponentModel.TypeConverter
-            : and then encoded with base64 encoding.
-    -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
+  <!--This file is generated from 'Resources.l12n.xml'. Do not modify it manually.-->
   <data name="ApplicationName" xml:space="preserve">
-    <value>ToDo-es</value>
+    <value>$ext_safeprojectname$</value>
+  </data>
+  <data name="Dialog_Common_Delete" xml:space="preserve">
+    <value>Eliminar</value>
+  </data>
+  <data name="Dialog_Common_Cancel" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteList_Title" xml:space="preserve">
+    <value>¿Estás seguro?</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteList_Content" xml:space="preserve">
+    <value>La lista se eliminará permanentemente.</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteTask_Title" xml:space="preserve">
+    <value>¿Estás seguro?</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteTask_Content" xml:space="preserve">
+    <value>La tarea se eliminará permanentemente.</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteNote_Title" xml:space="preserve">
+    <value>¿Estás seguro?</value>
+  </data>
+  <data name="Dialog_ConfirmDeleteNote_Content" xml:space="preserve">
+    <value>La nota se eliminará permanentemente.</value>
+  </data>
+  <data name="Dialog_ConfirmSignOut_Title" xml:space="preserve">
+    <value>Cerrar sesión</value>
+  </data>
+  <data name="Dialog_ConfirmSignOut_Content" xml:space="preserve">
+    <value>¿Estás seguro de que te gustaría salir?</value>
+  </data>
+  <data name="Dialog_ConfirmSignOut_SignOut" xml:space="preserve">
+    <value>Cerrar sesión</value>
+  </data>
+  <data name="WelcomePage_Welcome.Text" xml:space="preserve">
+    <value>¡Bienvenido a Uno To Do!</value>
+  </data>
+  <data name="WelcomePage_Line2.Text" xml:space="preserve">
+    <value>Comienza a usar la mejor aplicación de tareas pendientes</value>
+  </data>
+  <data name="WelcomePage_GetStarted.Content" xml:space="preserve">
+    <value>Empezar</value>
+  </data>
+  <data name="HomePage_ImportantTaskListLabel" xml:space="preserve">
+    <value>Importante</value>
+  </data>
+  <data name="HomePage_CommonTaskListLabel" xml:space="preserve">
+    <value>Tareas</value>
+  </data>
+  <data name="HomePage_TaskList" xml:space="preserve">
+    <value>Lista de tareas</value>
+  </data>
+  <data name="HomePage_CreateTaskList.Content" xml:space="preserve">
+    <value>Nueva lista</value>
+  </data>
+  <data name="AddListFlyout_PageTitle.Text" xml:space="preserve">
+    <value>Nueva lista</value>
+  </data>
+  <data name="AddListFlyout_ListNameInput.PlaceholderText" xml:space="preserve">
+    <value>Escribe el título de la lista</value>
+  </data>
+  <data name="AddListFlyout_CancelButton.Content" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="AddListFlyout_CreateButton.Content" xml:space="preserve">
+    <value>Crear</value>
+  </data>
+  <data name="TaskListPage_NavigationBar.Content" xml:space="preserve">
+    <value>Lista de tareas</value>
+  </data>
+  <data name="TaskListPage_TodoTab.Content" xml:space="preserve">
+    <value>PENDIENTES</value>
+  </data>
+  <data name="TaskListPage_CompletedTab.Content" xml:space="preserve">
+    <value>COMPLETADAS</value>
+  </data>
+  <data name="TaskListPage_TaskDueDateFormatter.Format" xml:space="preserve">
+    <value>ddd, d' de 'MMM</value>
+  </data>
+  <data name="TaskListPage_CreateTaskButton.Content" xml:space="preserve">
+    <value>Agregar una tarea</value>
+  </data>
+  <data name="RenameListFlyout_Title.Text" xml:space="preserve">
+    <value>Cambiar el nombre de la lista</value>
+  </data>
+  <data name="RenameListFlyout_InputTextBox.PlaceholderText" xml:space="preserve">
+    <value>Cambiar el nombre de la lista</value>
+  </data>
+  <data name="RenameListFlyout_CancelButton.Content" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="RenameListFlyout_RenameButton.Content" xml:space="preserve">
+    <value>Renombrar</value>
+  </data>
+  <data name="AddTaskFlyout_Title.Text" xml:space="preserve">
+    <value>Agregar una tarea</value>
+  </data>
+  <data name="AddTaskFlyout_InputTextBox.PlaceholderText" xml:space="preserve">
+    <value>Agregar una tarea</value>
+  </data>
+  <data name="AddTaskFlyout_CancelButton.Content" xml:space="preserve">
+    <value>Cancelar</value>
+  </data>
+  <data name="AddTaskFlyout_CreateButton.Content" xml:space="preserve">
+    <value>Crear</value>
+  </data>
+  <data name="TaskControl_TaskNameTextBox.PlaceholderText" xml:space="preserve">
+    <value>Nombre de la tarea</value>
+  </data>
+  <data name="TaskControl_TaskBodyTextBox.PlaceholderText" xml:space="preserve">
+    <value>Añadir nota</value>
+  </data>
+  <data name="TaskControl_AddTaskButton.Content" xml:space="preserve">
+    <value>Abierto</value>
+  </data>
+  <data name="TaskControl_DueDateFormatter.Format" xml:space="preserve">
+    <value>Para el {0:ddd, d' de 'MMM}</value>
+  </data>
+  <data name="TaskControl_CreatedDateFormatter.Format" xml:space="preserve">
+    <value>Creada el {0:ddd, d' de 'MMM}</value>
+  </data>
+  <data name="TaskControl_CompletedDateFormatter.Format" xml:space="preserve">
+    <value>Completó el {0:ddd, d' de 'MMM}</value>
+  </data>
+  <data name="SearchPage_InputTextBox.PlaceholderText" xml:space="preserve">
+    <value>Buscar tareas</value>
+  </data>
+  <data name="SettingsFlyout_NavigationBar.Content" xml:space="preserve">
+    <value>Configuración</value>
+  </data>
+  <data name="SettingsFlyout_SignOutButton.Content" xml:space="preserve">
+    <value>Cerrar sesión</value>
+  </data>
+  <data name="SettingsFlyout_GeneralSection.Text" xml:space="preserve">
+    <value>General</value>
+  </data>
+  <data name="SettingsFlyout_PaletteSection.Text" xml:space="preserve">
+    <value>Paleta de color</value>
+  </data>
+  <data name="SettingsFlyout_PalettePurple.Content" xml:space="preserve">
+    <value>Violeta</value>
+  </data>
+  <data name="SettingsFlyout_PaletteBlue.Content" xml:space="preserve">
+    <value>Azul</value>
+  </data>
+  <data name="SettingsFlyout_PaletteYellow.Content" xml:space="preserve">
+    <value>Amarilla</value>
+  </data>
+  <data name="SettingsFlyout_LanguageLabel.Text" xml:space="preserve">
+    <value>Idioma</value>
+  </data>
+  <data name="SettingsFlyout_LanguageLabel_en" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="SettingsFlyout_LanguageLabel_fr" xml:space="preserve">
+    <value>Français</value>
+  </data>
+  <data name="SettingsFlyout_LanguageLabel_es" xml:space="preserve">
+    <value>Español</value>
+  </data>
+  <data name="SettingsFlyout_NoteToRestart.Text" xml:space="preserve">
+    <value>Reinicia la aplicación para aplicar el cambio</value>
+  </data>
+  <data name="SettingsFlyout_ThemeLabel.Text" xml:space="preserve">
+    <value>Tema</value>
+  </data>
+  <data name="SettingsFlyout_ThemeLight" xml:space="preserve">
+    <value>Claro</value>
+  </data>
+  <data name="SettingsFlyout_ThemeDark" xml:space="preserve">
+    <value>Oscuro</value>
+  </data>
+  <data name="SettingsFlyout_AboutSection.Text" xml:space="preserve">
+    <value>Acerca de</value>
+  </data>
+  <data name="SettingsFlyout_VersionLabel.Text" xml:space="preserve">
+    <value>Versión</value>
+  </data>
+  <data name="FeedView_Loading.Text" xml:space="preserve">
+    <value>Cargando...</value>
   </data>
 </root>
