fix(ToDo): Multiple colors and UI related issues

--- a/reference/ToDo/src/ToDo/Strings/en/Resources.resw
+++ b/reference/ToDo/src/ToDo/Strings/en/Resources.resw
@@ -126,6 +126,9 @@
   <data name="TaskControl_CompletedDateFormatter.Format" xml:space="preserve">
     <value>Created on {0:ddd, d MMMM}</value>
   </data>
+  <data name="TaskPage_AddDueDate.Text" xml:space="preserve">
+    <value>Add a due date</value>
+  </data>
   <data name="SearchPage_InputTextBox.PlaceholderText" xml:space="preserve">
     <value>Search for tasks</value>
   </data>
