--- a/reference/ToDo/src/ToDo/Strings/es/Resources.resw
+++ b/reference/ToDo/src/ToDo/Strings/es/Resources.resw
@@ -126,6 +126,9 @@
   <data name="TaskControl_CompletedDateFormatter.Format" xml:space="preserve">
     <value>Completó el {0:ddd, d' de 'MMM}</value>
   </data>
+  <data name="TaskPage_AddDueDate.Text" xml:space="preserve">
+    <value>Agregar una fecha de vencimiento</value>
+  </data>
   <data name="SearchPage_InputTextBox.PlaceholderText" xml:space="preserve">
     <value>Buscar tareas</value>
   </data>
