--- a/reference/ToDo/src/ToDo/Strings/fr/Resources.resw
+++ b/reference/ToDo/src/ToDo/Strings/fr/Resources.resw
@@ -126,6 +126,9 @@
   <data name="TaskControl_CompletedDateFormatter.Format" xml:space="preserve">
     <value>Achevée le {0:ddd d MMM}</value>
   </data>
+  <data name="TaskPage_AddDueDate.Text" xml:space="preserve">
+    <value>Ajouter une date d'échéance</value>
+  </data>
   <data name="SearchPage_InputTextBox.PlaceholderText" xml:space="preserve">
     <value>Rechercher des tâches</value>
   </data>
